# wc2026-ml-simulator

./: .gitignore  Makefile  README.md  build_dataset.py  evaluate.py  kaggle.json  main.py  pyproject.toml  requirements.txt  simulate_wc2026.py  test.ipynb  train_models.py
data/fbref_cache/: leagues.html  seasons_Big 5 European Leagues Combined.html  teams_Big 5 European Leagues Combined_2223_keeper_for.html  teams_Big 5 European Leagues Combined_2223_misc_for.html  teams_Big 5 European Leagues Combined_2223_playing_time_for.html  teams_Big 5 European Leagues Combined_2223_shooting_for.html  teams_Big 5 European Leagues Combined_2223_standard_for.html  teams_Big 5 European Leagues Combined_2324_keeper_for.html  teams_Big 5 European Leagues Combined_2324_misc_for.html  teams_Big 5 European Leagues Combined_2324_playing_time_for.html  teams_Big 5 European Leagues Combined_2324_shooting_for.html  teams_Big 5 European Leagues Combined_2324_standard_for.html  teams_Big 5 European Leagues Combined_2425_keeper_for.html  teams_Big 5 European Leagues Combined_2425_misc_for.html  teams_Big 5 European Leagues Combined_2425_playing_time_for.html  teams_Big 5 European Leagues Combined_2425_shooting_for.html  teams_Big 5 European Leagues Combined_2425_standard_for.html  (+5 more)
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_model_training.ipynb  04_evaluation.ipynb  05_wc2026_simulation.ipynb  06_results_presentation.ipynb  07_storytelling_mlfoot2026.ipynb  full_pipeline.ipynb
report/: experimental_plan.md  final_checklist.md  repo_to_report_mapping.md  report_skeleton.md
(+23 files in other folders)
